force-app/main/default/objects/Flow_Test_Result__c/Flow_Test_Result__c.object-meta.xml
<CustomObject>
    <label>Flow Test Result</label>
    <nameField>
        <displayFormat>FT-{0000}</displayFormat>
        <label>Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flow Test Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>