force-app/main/default/objects/Flow_Test_Result__c/fields/AI_Insight__c.field-meta.xml
<CustomField>
    <fullName>AI_Insight__c</fullName>
    <inlineHelpText>For later use when AI summaries are added</inlineHelpText>
    <label>AI Insight</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>