force-app/main/default/objects/Flow_Test_Result__c/fields/Execution_Duration_ms__c.field-meta.xml
<CustomField>
    <fullName>Execution_Duration_ms__c</fullName>
    <inlineHelpText>Optional timing info</inlineHelpText>
    <label>Execution Duration (ms)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>