force-app/main/default/objects/Flow_Test_Result__c/fields/Flow_Test__c.field-meta.xml
<CustomField>
    <fullName>Flow_Test__c</fullName>
    <label>Flow Test</label>
    <referenceTo>Flow_Test__c</referenceTo>
    <relationshipLabel>Flow Tests</relationshipLabel>
    <relationshipName>Flow_Test_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>