force-app/main/default/objects/Flow_Test_Result__c/fields/Log_Details__c.field-meta.xml
<CustomField>
    <fullName>Log_Details__c</fullName>
    <inlineHelpText>Execution summary / errors</inlineHelpText>
    <label>Log Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>