force-app/main/default/objects/Flow_Test_Result__c/fields/Run_By__c.field-meta.xml
<CustomField>
    <fullName>Run_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who executed the test</inlineHelpText>
    <label>Run By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Test_Ran_By</relationshipName>
    <type>Lookup</type>
</CustomField>