force-app/main/default/objects/Flow_Test_Result__c/fields/Run_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Run_Date_Time__c</fullName>
    <inlineHelpText>When test executed</inlineHelpText>
    <label>Run Date/Time</label>
    <type>DateTime</type>
</CustomField>